hydromel/tests/errors/sem-src-intf-port-not-found.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

interface I
end

component C
    port x : I
    port y : out unsigned(32)
    # ERROR: Port not found in interface I
    y = x.a
end
